# carrot-interface-rs

./: README.md
carrot_common_interface/: Cargo.toml  README.md
carrot_common_interface/src/: label.rs
object_detection/: Cargo.toml  README.md
object_detection/src/: lib.rs
