[package]
name = "carrot_common_interface"
version = "0.1.0"
edition = "2021"

license = "MIT"
description = "The common interface for robotics and vision application"
authors = ["scepter914 <scepter914@gmail.com>"]

readme = "README.md"
documentation = "https://docs.rs/carrot_common_interface"
repository = "https://github.com/scepter914/carrot-interface-rs"
categories = ["computer-vision"]
keywords = ["image"]

[dependencies]
image = "0.24"
